<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_appointment"
            android:icon="@drawable/ic_appointment"
            android:title="@string/drawer_appoinment"/>
        <item
            android:id="@+id/drawer_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/drawer_inventory"/>
        <item
            android:id="@+id/drawer_diseases"
            android:icon="@drawable/ic_diseases"
            android:title="@string/drawer_diseases"/>
        <item
            android:id="@+id/drawer_laboratories"
            android:icon="@drawable/ic_laboratories"
            android:title="@string/drawer_laboratories"/>

        <item
            android:id="@+id/drawer_clients"
            android:icon="@drawable/ic_clients"
            android:title="@string/drawer_clients"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings"/>

        <item
            android:id="@+id/drawer_compose"
            android:title="Compose"/>
    </group>
</menu>