<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etCodigoCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_client_hint_code" />
    <EditText
        android:id="@+id/etNombresCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_client_hint_names"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/etApellido1Cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_client_hint_lastname1"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/etApellido2Cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_client_hint_lastname2"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/etCorreoCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_client_hint_email"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/etTelefonoCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_client_hint_phone"
        android:layout_marginTop="8dp" />
    <EditText
        android:id="@+id/etDireccionCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_client_hint_address"
        android:layout_marginTop="8dp" />

</LinearLayout>